# rust_first_touch

./: .env  Cargo.toml  plan.txt
migrations/: 20250825152210_users2.sql  20250825152711_users_unique_field.sql  20250908201837_notnull_pwd.sql  20250909113553_links.sql
src/: auth.rs  dashboard.rs  main.rs  middleware.rs  models.rs  redirect.rs  router.rs
