[package]
name = "rust_rest_api_shortlinker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres" ] }
bcrypt = "0.17"
simple-cookie = "2.0.2"
nanoid = "0.4.0"